<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#FFFFFF">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/providername"
        android:id="@+id/textView"
        android:layout_marginLeft="@dimen/horizontal_margin"
        android:layout_marginTop="@dimen/vertical_margin"
        android:layout_marginRight="@dimen/horizontal_margin"
        android:layout_marginBottom="@dimen/vertical_margin"
        android:textSize="@dimen/smalltext_size" />

    <EditText
            android:id="@+id/ProviderName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/vertical_margin"
            android:layout_marginTop="@dimen/vertical_margin"
            android:gravity="center_vertical"
            android:hint="@string/hintprovidername"
        android:textColor="#000000"
            android:textSize="@dimen/big_text"
            android:textStyle="bold"
        android:layout_marginLeft="@dimen/horizontal_margin"
        android:layout_marginRight="@dimen/horizontal_margin"
        android:inputType="textCapSentences" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/provideraddress"
        android:id="@+id/textView2"
        android:layout_marginLeft="@dimen/horizontal_margin"
        android:layout_marginTop="@dimen/vertical_margin"
        android:layout_marginRight="@dimen/horizontal_margin"
        android:layout_marginBottom="@dimen/vertical_margin"
        android:textSize="@dimen/smalltext_size" />

    <EditText
            android:id="@+id/ProviderAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/vertical_margin"
            android:layout_marginTop="@dimen/vertical_margin"
            android:gravity="center_vertical"
            android:hint="@string/hintprovideraddress"
            android:inputType="textCapWords|textPostalAddress"
            android:textColor="#000000"
            android:textSize="@dimen/big_text"
            android:textStyle="bold"
        android:layout_marginLeft="@dimen/horizontal_margin"
        android:layout_marginRight="@dimen/horizontal_margin" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/providerphone"
        android:id="@+id/textView3"
        android:layout_marginLeft="@dimen/horizontal_margin"
        android:layout_marginTop="@dimen/vertical_margin"
        android:layout_marginRight="@dimen/horizontal_margin"
        android:layout_marginBottom="@dimen/vertical_margin"
        android:textSize="@dimen/smalltext_size" />

    <EditText
            android:id="@+id/ProviderPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/vertical_margin"
            android:layout_marginTop="@dimen/vertical_margin"
            android:gravity="center_vertical"
            android:hint="@string/hintproviderphone"

            android:textColor="#000000"
            android:textSize="@dimen/big_text"
            android:textStyle="bold"
            android:inputType="phone"
        android:layout_marginLeft="@dimen/horizontal_margin"
        android:layout_marginRight="@dimen/horizontal_margin" />


</LinearLayout>