<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#FFFFFF">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/partname"
        android:id="@+id/textView"
        android:layout_marginLeft="@dimen/horizontal_margin"
        android:layout_marginTop="@dimen/vertical_margin"
        android:layout_marginRight="@dimen/horizontal_margin"
        android:layout_marginBottom="@dimen/vertical_margin"
        android:textSize="@dimen/smalltext_size" />

    <EditText
            android:id="@+id/PartName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/vertical_margin"
            android:layout_marginTop="@dimen/vertical_margin"
            android:gravity="center_vertical"
            android:hint="@string/hintpartname"
            android:inputType="textCapSentences"
            android:textColor="#000000"
            android:textSize="@dimen/big_text"
            android:textStyle="bold"
        android:layout_marginLeft="@dimen/horizontal_margin"
        android:layout_marginRight="@dimen/horizontal_margin" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/partnumber"
        android:id="@+id/textView2"
        android:layout_marginLeft="@dimen/horizontal_margin"
        android:layout_marginTop="@dimen/vertical_margin"
        android:layout_marginRight="@dimen/horizontal_margin"
        android:layout_marginBottom="@dimen/vertical_margin"
        android:textSize="@dimen/smalltext_size" />

    <EditText
            android:id="@+id/PartNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/vertical_margin"
            android:layout_marginTop="@dimen/vertical_margin"
            android:gravity="center_vertical"
            android:hint="@string/hintpartnumber"
            android:textColor="#000000"
            android:textSize="22dp"
            android:textStyle="bold"
        android:layout_marginLeft="@dimen/horizontal_margin"
        android:layout_marginRight="@dimen/horizontal_margin" />



</LinearLayout>