<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/horizontal_margin"
        android:layout_marginRight="@dimen/horizontal_margin">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/currencyname"
                android:id="@+id/textView"
                android:layout_marginTop="@dimen/vertical_margin"
                android:textSize="@dimen/smalltext_size" />

            <EditText
                    android:id="@+id/CurrencyName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/vertical_margin"
                    android:layout_marginTop="@dimen/vertical_margin"
                    android:gravity="center_vertical"
                    android:hint="@string/hintcurrencyname"
                    android:inputType="textCapWords"
                    android:textColor="#000000"
                    android:textSize="@dimen/big_text"
                    android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/middle_margin">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/currencyicn"
                android:id="@+id/textView"
                android:textSize="@dimen/smalltext_size" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/CurrencySpinner" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/horizontal_margin"
        android:layout_marginRight="@dimen/horizontal_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currencyprice"
        android:id="@+id/textView2" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
                android:id="@+id/CurrencyPrice"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical"
                android:hint="@string/hintcurrencyprice"
                android:textColor="#000000"
                android:textSize="@dimen/big_text"
                android:textStyle="bold"
                android:inputType="numberDecimal"/>
    </LinearLayout>

</LinearLayout>

</LinearLayout>