<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/horizontal_margin"
        android:layout_marginRight="@dimen/horizontal_margin"
        android:layout_marginTop="@dimen/vertical_margin"
        android:layout_marginBottom="@dimen/vertical_margin"
        android:textSize="@dimen/smalltext_size"
        android:text="@string/categoryname"
        android:paddingLeft="@dimen/middle_margin" />

    <EditText
        android:id="@+id/CategoryName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/vertical_margin"
        android:layout_marginTop="@dimen/vertical_margin"
        android:gravity="center_vertical"
        android:hint="@string/hintcategoryname"
        android:inputType="textCapSentences"
        android:textColor="#000000"
        android:textSize="@dimen/big_text"
        android:textStyle="bold"
        android:layout_marginLeft="@dimen/horizontal_margin"
        android:layout_marginRight="@dimen/horizontal_margin" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/categoryicon"
        android:id="@+id/textView"
        android:layout_marginTop="@dimen/vertical_margin"
        android:layout_marginBottom="@dimen/vertical_margin"
        android:textSize="@dimen/smalltext_size"
        android:layout_marginLeft="@dimen/horizontal_margin"
        android:layout_marginRight="@dimen/horizontal_margin"
        android:textAlignment="center" />


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/horizontal_margin"
        android:layout_marginRight="@dimen/horizontal_margin">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">


            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/CategorySpinner"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/vertical_margin" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/categorycolor"
                android:id="@+id/btncolor"
                android:onClick="onClickbtncolor"
                android:layout_gravity="right" />
        </LinearLayout>


    </LinearLayout>


</LinearLayout>